--- a/index.css
+++ b/index.css
@@ -2,3 +2,24 @@
     text-align : center;
     background:rgb(19, 57, 76)
 }
+
+h1{
+    text-transform: uppercase;
+    margin-top: auto;
+}
+
+h3{
+    text-transform: uppercase;
+    margin: auto;
+}
+
+p{
+    text-transform: uppercase;
+    margin: auto;
+    font-size: 13px;
+}
+
+.recados{
+    padding: 10px;
+    background: darkgray;
+}
