--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 h1{
     text-transform: uppercase;
     margin-top: auto;
+    color: #13394c;
 }
 
 h3{
@@ -21,5 +22,6 @@ p{
 
 .recados{
     padding: 10px;
-    background: darkgray;
+    background: #13394c;
+    color: #d6d6d6;
 }
