--- a/padrao.css
+++ b/padrao.css
@@ -1,5 +1,6 @@
 html {
     padding: 0px;
+    overflow-y: scroll; 
 }
 
 body {
@@ -11,14 +12,26 @@ head {
     display: block;
 }
 
+.header {
+    height: 63px;
+    background: #13394c;
+    width: 1333px;
+}
+
 .logo {
     width: 15%;
+    float: left;
+}
+
+#menu {
+    float: left;
+    margin-left: 40px;
+    margin-top: 17px;
 }
 
   #menu ul {
     padding:0px;
     margin:0px;
-    background-color:#D6D6D6;
     list-style:none;
 }
 
@@ -27,12 +40,10 @@ head {
 #menu ul li a {
     padding: 2px 10px;
     display: inline-block;
-
-    /* visual do link */
-    background-color:#D6D6D6;
-    color: #333;
+    background-color: #13394c;
+    color: #d6d6d6;
     text-decoration: none;
-    border-bottom:3px solid #D6D6D6;
+    border-bottom: 3px solid #D6D6D6;
 }
 
 #menu ul li a:hover {
@@ -54,8 +65,7 @@ head {
 #corpo {
     float: left;
     height: 300px;
-    max-width: 74%;
-    width: 100%;
+    width: 989px;
     padding: 20px;
     margin: 10px 0px 10px 0px;
     background: #D6D6D6;
@@ -66,8 +76,7 @@ head {
     * valor antigo 220
     */
     height: 300px;
-    width: 100%;
-    max-width: 22%;
+    width: 294px;
     margin: 10px 0px 10px 10px;
     background:rgb(153, 153, 153);
 }
@@ -83,6 +92,7 @@ footer a{
 }
 
 footer {
+    width: 1318px;
     clear:both;
     text-align: right;
     padding: 8px;
