--- a/estiloNoticia.css
+++ b/estiloNoticia.css
@@ -1,21 +1,34 @@
-.paginaComanda{
-	margin-top:20px;
-    margin-left: 15px;
-    width:900px;
-	height:900px;
-    background-color:#D6D6D6;
+
+#direita {
+    text-align : center;
+    background:rgb(19, 57, 76)
 }
 
-.boxNew{
-    width:888px;
-    height:252px;
-    margin-left:1px;
-    background-color:red;	
-	border:solid #CCC; /*borda do botão*/
-	
-}
-
-h1{
+h2{
     text-transform: uppercase;
-    margin-top: auto;
+    margin-left:350px;
+    color:#D6D6D6;
 }
+h1{
+   
+}
+.noticia{
+    padding: 10px;
+    background: #13394c;
+    color: #d6d6d6;
+    width:980px;
+    height:399px;
+   
+}
+.imagem{
+    margin-top:auto;
+    width:280px;
+    height:300px;
+    
+}
+.p{
+    margin-top: auto
+    color: red;
+    float: left;
+
+ }
