--- a/padrao.css
+++ b/padrao.css
@@ -65,7 +65,7 @@ head {
 }
 #corpo {
     float: left;
-    height: 300px;
+    height: 100%;
     width: 989px;
     padding: 20px;
     margin: 10px 0px 10px 0px;
