--- a/estiloNoticia.css
+++ b/estiloNoticia.css
@@ -1,21 +1,52 @@
-.paginaComanda{
-	margin-top:20px;
-    margin-left: 15px;
-    width:900px;
-	height:900px;
-    background-color:#D6D6D6;
+
+
+#direita {
+    text-align : center;
+    background:rgb(19, 57, 76)
 }
 
-.boxNew{
-    width:888px;
-    height:252px;
-    margin-left:1px;
-    background-color:red;	
-	border:solid #CCC; /*borda do botão*/
-	
-}
-
-h1{
+h2{
     text-transform: uppercase;
-    margin-top: auto;
+    color:#D6D6D6;
+    position: absolute;
+    margin-left: 350px;
+
 }
+
+.noticia{
+    padding: 10px;
+    background: #13394c;
+    color: #d6d6d6;
+    width:980px;
+    height:300px;
+
+}
+
+.imagem{
+    margin-top:auto;
+    width:280px;
+    height:300px;
+    position:absolute;
+    
+}
+.p{
+    margin-top: auto;
+    color: white;
+    float: left;
+ }
+
+ .teste {
+    position: absolute;
+    margin-top: 55px;
+    margin-left: 299px;
+    height: 100px;
+    color: white;
+    float: left;
+}
+
+
+
+
+
+
+
