--- a/listaCurso.css
+++ b/listaCurso.css
@@ -8,7 +8,7 @@
     width: 1311px;
     margin-top:20px;
     padding: 10px;
-    background: black;
+    
 }
 
 .boxVerde{
@@ -19,6 +19,12 @@
     background: #13394c;
     color: #d6d6d6;
 }
-.table{
-
+h3{
+    text-transform: uppercase;
+    margin: auto;
+}
+h1{
+    text-transform: uppercase;
+    margin-top: auto;
+    color:  #d6d6d6;
 }
