--- a/listaCurso.css
+++ b/listaCurso.css
@@ -18,6 +18,9 @@
     margin-left: 150px;
     background: #13394c;
     color: #d6d6d6;
+    border-radius:0px;
+	border:dashed;
+	border:solid #fff;
 }
 h3{
     text-transform: uppercase;
