--- a/padrao.css
+++ b/padrao.css
@@ -98,7 +98,7 @@ footer {
     text-align: right;
     padding: 8px;
     display: block;
-    background-color: #002d70;
+    background-color:black;
     font-size: 14px;
 }
 .rodaPeImg{
