--- a/index.css
+++ b/index.css
@@ -1,7 +1,4 @@
-#direita {
-    text-align : center;
-    background:rgb(19, 57, 76)
-}
+
 
 h1{
     text-transform: uppercase;
@@ -24,4 +21,5 @@ p{
     padding: 10px;
     background: #13394c;
     color: #d6d6d6;
+    margin: 10px;
 }
