--- a/listaCurso.css
+++ b/listaCurso.css
@@ -6,24 +6,17 @@
 .corpo {
     height: 100%;
     width: 1311px;
-    margin-top:20px;
+    margin-top:30px;
     padding: 10px;
     
 }
-
-
-
-
-
 .boxVerde{
     padding: 10px;
     height: 100%;
     width: 900px;
-    /* margin-left: 150px; */
-    background: #d6d6d6;
     color: #13394c;
-    border-radius:0px;
-	border:dashed #13394c;
+    border-radius:8px;
+	
 }
 h3{
     text-transform: uppercase;
@@ -36,4 +29,8 @@ h1{
 }
 table{
     border: 1px solid;
+    border-radius:4px;
+    margin-left: 50px;
 }
+
+
