--- a/estiloNoticia.css
+++ b/estiloNoticia.css
@@ -29,9 +29,9 @@ h2{
 }
 
 .imagem{
-    margin-top:auto;
-    width:280px;
-    height:300px;
+    margin-top:25px;
+    width:270px;
+    height:250px;
     position:absolute;
     
 }
