--- a/detalhecurso.css
+++ b/detalhecurso.css
@@ -13,6 +13,13 @@ p{
     text-transform: uppercase;
     margin: auto;
     font-size: 14px;
+    color:  #13394c;
+}
+
+li{
+    text-transform: uppercase;
+    margin: auto;
+    font-size: 14px;
     color:  #13394c
 }
 
